# jakes-stuff

poker/: README.md  README_ENHANCED.md  demo_visuals.py  enhanced_demo.py  play.sh  pyproject.toml  test_visuals.py
poker/poker_game/: __init__.py  cards.py  game.py  hand_evaluator.py  main.py  main_enhanced.py  player.py  visuals.py
poker/tests/: __init__.py
rock-paper-scissors/: pyproject.toml
tina/: .flake8  DEVELOPMENT.md  format.sh  pyproject.toml
tina/tina/: brickwall.py  chessboard.py  dottywotty.py  main.py
